--- a/src/scss/custom/_mobile.scss
+++ b/src/scss/custom/_mobile.scss
@@ -46,11 +46,11 @@
                 }
 
                 .customButton {
-                    background-color: #303030 !important;
+                    background-color: $brand-primary-background !important;
                     text-align: center;
 
                     &.negative {
-                        background-color: #303030 !important;
+                        background-color: $brand-primary-background !important;
                         color: white !important;
                     }
                 }
