--- a/src/scss/custom/_segmentedControl.scss
+++ b/src/scss/custom/_segmentedControl.scss
@@ -47,6 +47,7 @@ $segmented-control-border-radius: 5px;
         min-width: 120px;
         position: relative;
         text-align: center;
+        overflow: hidden;
         z-index: 1;
 
         &:first-child {
