--- a/src/scss/custom/_expedition.scss
+++ b/src/scss/custom/_expedition.scss
@@ -183,6 +183,12 @@
         transform: translateY(-50%);
         filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
     }
+
+    @media only screen and (max-width: 1500px) {
+        img.milestone-patch {
+            top: -7em;
+        }
+    }
 }
 
 .milestone-reward-content {
