--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -3,6 +3,7 @@
     --assistantapps-font-family: $defaultFont;
     --assistantapps-font-weight: "300";
     --assistantapps-team-member-link-text-colour: #{$brand-secondary};
+    --background-colour: #{$brand-primary-background};
 }
 
 .main-panel.noscroll {
@@ -226,7 +227,7 @@ img.tiny {
 }
 
 .m-0-child {
-    >* {
+    > * {
         margin: 0;
     }
 }
