--- a/src/scss/custom/_genericListPresenter.scss
+++ b/src/scss/custom/_genericListPresenter.scss
@@ -57,12 +57,12 @@ $gen-item-extra-radius: 0.5em;
                     height: 100px;
                     min-width: 100px;
 
-                    >span {
+                    > span {
                         height: 100%;
                         width: 100%;
                         position: relative;
 
-                        >img {
+                        > img {
                             object-fit: cover;
                             height: 100%;
                             width: 100%;
@@ -140,6 +140,10 @@ $gen-item-extra-radius: 0.5em;
                     &.small {
                         font-size: 1.2rem;
                     }
+
+                    &.action-container-space {
+                        padding-right: 1.5em;
+                    }
                 }
 
                 .quantity-container {
@@ -183,14 +187,14 @@ $gen-item-extra-radius: 0.5em;
                         // padding-right: 1em;
                         // margin-top: 1rem;
 
-                        >* {
+                        > * {
                             // margin-top: .25em;
                             margin-right: 0.5em;
                             display: block;
                             color: white;
                         }
 
-                        >.not-centered {
+                        > .not-centered {
                             margin-top: 50%;
                         }
                     }
