--- a/src/scss/custom/_ads.scss
+++ b/src/scss/custom/_ads.scss
@@ -7,8 +7,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        border-top-left-radius: 1em;
-        border-top-right-radius: 1em;
+        padding: 1.5em;
         background-color: #232323;
     }
 }
