--- a/src/scss/custom/_sidebar.scss
+++ b/src/scss/custom/_sidebar.scss
@@ -3,11 +3,11 @@
     background-color: $brand-primary-background;
 }
 
-.main-panel>#sidebar-main-content-overlay {
+.main-panel > #sidebar-main-content-overlay {
     display: none;
 }
 
-.nav-open .main-panel>#sidebar-main-content-overlay {
+.nav-open .main-panel > #sidebar-main-content-overlay {
     @media (max-width: 991px) {
         display: block;
     }
@@ -18,11 +18,12 @@
     color: $brand-secondary;
 }
 
-.nav .nav-item.active>.nav-link .material-icons {
+.nav .nav-item.active > .nav-link .material-icons {
     color: $brand-secondary;
 }
 
 .sidebar {
+    overflow: hidden;
     .nav {
         p {
             // white-space: nowrap;
@@ -36,7 +37,6 @@
             height: 0;
             overflow: hidden;
             transition: height 150ms ease-in-out;
-
 
             &.expanded {
                 height: unset;
