--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -27,6 +27,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/mobile";
 @import "./custom/title";
 @import "./custom/fab";
+@import "./custom/networkStatus";
 @import "./custom/sweetalertDark";
 
 @import "./custom/catalogue";
