--- a/src/scss/material-dashboard/_responsive.scss
+++ b/src/scss/material-dashboard/_responsive.scss
@@ -502,7 +502,7 @@
         .navbar .container .navbar-wrapper,
         .navbar .container {
             left: 0;
-            @include transform-translate-x(-260px);
+            @include transform-translate-x(-var(--sidebar-width));
         }
 
         .sidebar {
@@ -566,7 +566,7 @@
         display: block;
         top: 0;
         height: 100vh;
-        width: 260px;
+        width: var(--sidebar-width);
         right: 0;
         left: auto;
         z-index: 1032;
@@ -578,7 +578,7 @@
         padding-right: 0px;
         padding-left: 0;
 
-        @include transform-translate-x(260px);
+        @include transform-translate-x(var(--sidebar-width));
         @include transitions (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
         >ul {
