--- a/src/scss/material-dashboard/mixins/_variables.scss
+++ b/src/scss/material-dashboard/mixins/_variables.scss
@@ -21,5 +21,5 @@ $bottombar-x:          bottombar-x !default;
 $bottombar-back:       bottombar-back !default;
 
 // Sidebar variables
-$sidebar-width:              calc(100% - 260px) !default;
+$sidebar-width:              calc(100% - var(--sidebar-width)) !default;
 $sidebar-mini-width:         calc(100% - 80px) !default;
