--- a/src/scss/material-dashboard/variables/_modals.scss
+++ b/src/scss/material-dashboard/variables/_modals.scss
@@ -24,7 +24,7 @@ $transition-ease-out:             ease-out !default;
 $ultra-fast-transition-time:      60ms  !default;
 $navbar-padding-a:               10px 15px;
 $padding-zero:                   0px !default;
-$sidebar-width:               calc(100% - 260px) !default;
+$sidebar-width:               calc(100% - var(--sidebar-width)) !default;
 $sidebar-mini-width:         calc(100% - 80px) !default;
 $topbar-back:          topbar-back !default;
 $bottombar-back:       bottombar-back !default;
