--- a/src/scss/custom/_fab.scss
+++ b/src/scss/custom/_fab.scss
@@ -1,6 +1,3 @@
-.mdc-fab:not(.mdc-fab--extended) {
-    border-radius: 50%;
-}
 .fab-margin {
     margin: 0.5em;
 }
@@ -8,6 +5,7 @@
 .mdc-fab {
     fill: currentColor;
     align-items: center;
+    appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
     border: none;
@@ -32,29 +30,30 @@
     -ms-user-select: none;
     user-select: none;
     width: 56px;
-}
 
-.mdc-fab:after,
-.mdc-fab:before {
-    height: 200%;
-    left: -50%;
-    top: -50%;
-    width: 200%;
-}
+    &::after,
+    &::before {
+        height: 200%;
+        left: -50%;
+        top: -50%;
+        width: 200%;
+        border-radius: 50%;
+        content: "";
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+    }
 
-.mdc-fab:before {
-    transition: opacity 15ms linear, background-color 15ms linear;
-    z-index: 1;
-}
-.mdc-fab:after,
-.mdc-fab:before {
-    border-radius: 50%;
-    content: "";
-    opacity: 0;
-    pointer-events: none;
-    position: absolute;
-}
+    &::before {
+        transition: opacity 15ms linear, background-color 15ms linear;
+        z-index: 1;
+    }
 
-.mdc-fab:focus {
-    outline: unset;
+    &:focus {
+        outline: unset;
+    }
+
+    &:not(.mdc-fab--extended) {
+        border-radius: 50%;
+    }
 }
