--- a/src/scss/custom/_community.scss
+++ b/src/scss/custom/_community.scss
@@ -102,7 +102,8 @@ $community-search-icon-border-radius: 5px;
 
         .community-icon {
             img {
-                border-top-left-radius: $community-search-icon-border-radius;
+				border-top-left-radius: $community-search-icon-border-radius;
+				object-fit: contain;
             }
         }
     }
