--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,13 +1,6 @@
-$defaultFont: "Roboto",
-Helvetica,
-Arial,
-sans-serif !important;
-$nmsAlphaThemed: "NMSFuturaProBook",
-Helvetica,
-sans-serif !important;
-$expAlphaThemed: "NMSExpeditionAlphabet",
-Helvetica,
-sans-serif !important;
+$defaultFont: "Roboto", Helvetica, Arial, sans-serif !important;
+$nmsAlphaThemed: "NMSFuturaProBook", Helvetica, sans-serif !important;
+$expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 
 @import "./custom/genericListPresenter";
 @import "./custom/guideCardListTile";
@@ -30,6 +23,7 @@ sans-serif !important;
 @import "./custom/sidebar";
 @import "./custom/searchBar";
 @import "./custom/shareButton";
+@import "./custom/updateItem";
 @import "./custom/mobile";
 @import "./custom/title";
 @import "./custom/fab";
