--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,6 +1,13 @@
-$defaultFont: "Roboto", Helvetica, Arial, sans-serif !important;
-$nmsAlphaThemed: "NMSFuturaProBook", Helvetica, sans-serif !important;
-$expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
+$defaultFont: "Roboto",
+Helvetica,
+Arial,
+sans-serif !important;
+$nmsAlphaThemed: "NMSFuturaProBook",
+Helvetica,
+sans-serif !important;
+$expAlphaThemed: "NMSExpeditionAlphabet",
+Helvetica,
+sans-serif !important;
 
 @import "./custom/genericListPresenter";
 @import "./custom/guideCardListTile";
@@ -15,6 +22,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/portal";
 @import "./custom/alert";
 @import "./custom/social";
+@import "./custom/solarCalc";
 @import "./custom/expedition";
 @import "./custom/starship";
 @import "./custom/ribbon";
