✨ Show major update on item details page

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,13 +1,6 @@
-$defaultFont: "Roboto",
-Helvetica,
-Arial,
-sans-serif !important;
-$nmsAlphaThemed: "NMSFuturaProBook",
-Helvetica,
-sans-serif !important;
-$expAlphaThemed: "NMSExpeditionAlphabet",
-Helvetica,
-sans-serif !important;
+$defaultFont: "Roboto", Helvetica, Arial, sans-serif !important;
+$nmsAlphaThemed: "NMSFuturaProBook", Helvetica, sans-serif !important;
+$expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 
 @import "./custom/genericListPresenter";
 @import "./custom/guideCardListTile";
