✨ Translate store badges

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -3,6 +3,8 @@
     --assistantapps-font-family: $defaultFont;
     --assistantapps-font-weight: "300";
     --assistantapps-team-member-link-text-colour: #{$brand-secondary};
+
+    --assistantapps-store-tile-size: 350px;
 }
 
 .main-panel.noscroll {
