--- a/src/scss/material-dashboard/_dropdown.scss
+++ b/src/scss/material-dashboard/_dropdown.scss
@@ -89,7 +89,7 @@
     font-weight: normal;
     text-decoration: none;
     font-size: 0.8125rem;
-    border-radius: $border-radius / 2;
+    border-radius: $border-radius * 0.5;
     margin: 0 $bmd-dropdown-margin-y;
     @include transitions($fast-transition-time, $transition-linear);
     padding: $dropdown-item-padding-y $dropdown-item-padding-x;
