--- a/src/scss/material-dashboard/_togglebutton.scss
+++ b/src/scss/material-dashboard/_togglebutton.scss
@@ -79,7 +79,7 @@
     // set bg when checked
     input[type=checkbox]:checked {
       +.toggle {
-        background-color: rgba($brand-primary, (70/100)); // Switch bg on
+        background-color: rgba($brand-primary, (70*0.01)); // Switch bg on
       }
 
       +.toggle:after {
@@ -87,7 +87,7 @@
       }
 
       +.toggle:active:after {
-        box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba($brand-primary, (10/100)); // Ripple on
+        box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba($brand-primary, (10*0.01)); // Ripple on
       }
     }
   }
