✨ Add some fishing stats

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -12,6 +12,9 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/tree";
 @import "./custom/chip";
 @import "./custom/guide";
+@import "./custom/dropdown";
+@import "./custom/fishing";
+@import "./custom/patreon";
 @import "./custom/portal";
 @import "./custom/alert";
 @import "./custom/social";
